# RedBlueMatcher

./: .env.example  .gitignore  audit_results.py  benchmark.py  config.py  count_red_invoices.py  performance_tracker.py  red_blue_matcher.py  requirements.txt  result_writer.py  start_full_run_unbuffered.sh  trigger_java_match.sh  trigger_rust_match.sh  环境变量与配置总结.md
docs/: ALGORITHM_SELECTION.md  CONFIGURATION.md  PERFORMANCE_OPTIMIZATION.md  algorithm_analysis_202512122300.md  analysis_greedy_vs_ffd(gemini3 pro high).md  将Java红冲算法移植为Python策略.md  环境切换说明.md  税号过滤功能使用说明.md  算法优化+降低红票_2025121318.md  (+4 more)
tax-redflush-rust/: CLAUDE.md  Cargo.toml  IMPLEMENTATION_SUMMARY_v1.md  MATCHING_ALGORITHM.md  MATCHING_ALGORITHM_v1.md  PERFORMANCE_OPTIMIZATION.md  README.md  algorithm_comparison_v1_vs_v2.md  verify.sh
tax-redflush-rust/docs/: ITERATIVE_MATCHING_EXPLAINED.md  MATCHING_ALGORITHM_V2_1.md  MATCHING_ALGORITHM_V2_2.md  WHY_DUAL_SCORING.md  algorithm_comparison_v1_vs_v2.md  analysis_perf_v2.1_report.md
tax-redflush-rust/migrations/: 001_optimize_invoice_queries.sql  002_invoice_centric_indexes.sql  003_performance_boost_indexes.sql
tax-redflush-rust/scripts/: check_query_performance.sh  clean_results.sh  deduplicate_results.sql
tax-redflush-rust/src/: config.rs  lib.rs  main.rs
tax-redflush-rust/src/api/: handlers.rs
tax-redflush-rust/src/db/: mod.rs  pool.rs  queries.rs  queries_invoice_centric.rs
tax-redflush-rust/src/models/: bill.rs  invoice.rs  invoice_centric.rs  mod.rs  result.rs
tax-redflush-rust/src/service/: matcher.rs  matcher_invoice_centric.rs  mod.rs
(+40 files in other folders)
