[package]
name = "tax-redflush-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# 异步运行时
tokio = { version = "1", features = ["full"] }

# 数据库
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "bigdecimal", "chrono"] }

# 高性能数据结构
indexmap = "2"          # 替代 LinkedHashSet (保序+去重)
dashmap = "5"           # 并发安全 HashMap
bigdecimal = { version = "0.3", features = ["serde"] }      # 高精度十进制 (与 SQLx 兼容)

# 并行处理
rayon = "1.8"           # 数据并行

# HTTP 服务器
axum = "0.7"
tower = "0.4"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 日期时间
chrono = { version = "0.4", features = ["serde"] }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["local-time", "fmt", "chrono"] }

# 配置
config = "0.14"

[lib]
name = "tax_redflush_rust"
path = "src/lib.rs"

[[bin]]
name = "tax-redflush-rust"
path = "src/main.rs"
